20000117-22:09 GMT+3 Alexander Kresin
  * source/pp/hbpp.c
    * Few bugs fixed, reported by Matteo Baccan
  * contrib/rdd_ads/ads.ch
  * contrib/rdd_ads/ads1.c
  * contrib/rdd_ads/adsfunc.c
  * contrib/rdd_ads/rddads.h
    Bug fixed in SET INDEX TO ... implementation
    New commands added

20000117-16:05 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/rdd/dbcmd.c
        * fixed GPF in ORDBAGEXT()

20000117-13:30 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/type.c
        * added hb_retc( "U" ) for initial implementation of TYPE() function
        (due to a very popular demand :)

20000117-12:25 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/achoice.prg
    *source/rtl/input.prg
        * macro related code are active now

    *source/compiler/harbour.y
        * function that initializes static variables is generated
        properly when ANNOUNCE statement is used


20000116-20:30 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/harbinit.prg
        * replaced ANNOUNCEd CLIPPER5xx with procedure definition


20000116-15:35 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *include/hberrors.h
        * added WARN_DUPL_ANNOUNCE
        * added ERR_FUNC_ANNOUNCE

    *include/compiler.h
        * added declaration of hb_compAnnounce( char * )
        which creates an ANNOUNCEd procedure

    *source/compiler/hbgenerr.c
        * added warning when redundant ANNOUNCE statement is used
        * added error message when ANNUNCEd procedure is declared STATIC

    *source/compiler/harbour.y
    *source/compiler/harbour.l
    *source/compiler/harbour.c
        * fixed support for ANNOUNCE statement
        (static variables are no longer bound to ANNOUNCEd procedure)

    *source/pp/table.c
        * removed fixed translation of ANNOUNCE statement

    *source/compiler/cmdcheck.c
        * restored correct support for '-w' compiler switch

20000115-20:3  GMT+3 Luiz Rafael Culik <culik@sl.conex.net>
    *source/rtl/arrays.c