@@ -1,3 +1,8 @@
+2000-01-17 15:30 GMT-5 David G. Holm <dholm@ sd-llc.com>
+
+   * source/environ.c
+     ! Fixed problems in new Windows build version logic.
+
 20000117-22:09 GMT+3 Alexander Kresin
   * source/pp/hbpp.c
     * Few bugs fixed, reported by Matteo Baccan
